# teixeira24-delve-dr2-phz

./: .gitignore  README.md  pyproject.toml
_random/: DELVE_DR2_clean_spec.py  DELVE_DR2_merge_of_merge.py  DELVE_DR2_train_test_split.py  clean_DR2_DELVE.py  general_work.ipynb  match_DELVE_DR2Xspec.py
data/dlcat/: dlcat.csv  dlcat_summary.txt  dltrain_a.csv  extra_data.csv
data/mcat/: delve_cleaning_summary.txt
data/szcat/: szcat.fits
notebooks/: analysis.ipynb  data.ipynb  test.ipynb
results/griz/fold_0/: history.pkl
results/griz/fold_1/: history.pkl
scripts/: build_MCAT.py  build_dataset_pipeline.sh  build_dlcat.py  build_mcat.py  build_szcat.py  training_mdn.py
utils/: data.py  modeling.py  processing.py  utils.py
