[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "teixeira24"
version = "0.1.0"
description = "Code accompanying Teixeira et al. (2024)"
authors = [
    { name = "Gabriel Teixeira" }
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]